# user_service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  coverage.xml  pyproject.toml
.github/workflows/: main.yml  user_server-pipeline.yml
app/: main.py
scripts/: test.sh
tests/: test_main.py
