[project]
name = "user-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Max Platonov",email = "bliamba2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
coverage = "^7.6.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

